--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Greeting</h1>
+    <h1>Hello people!</h1>
     <p>Hello world!</p>
     <p>My name is Mila</p>
     <script src="js/script.js"></script>
