--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hello people!</h1>
     <p>Hello world!</p>
-    <p>My name is Mila</p>
+    <p>My name is Mila, I'm 25 years old</p>
     <script src="js/script.js"></script>
 </body>
 </html>
